@@ -27,6 +27,7 @@ import overrungl.util.value.Tuple2;
 
 import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
+import java.nio.charset.StandardCharsets;
 import java.util.function.Supplier;
 
 import static java.lang.foreign.ValueLayout.*;
@@ -66,8 +67,8 @@ import static overrungl.FunctionDescriptors.*;
  *             new Pair<>("Image file", "png,jpg"));
  *         var result = NFD.openDialogN(outPath, filterItem, null);
  *         switch (result) {
- *             case ERROR -> System.err.println(STR. "Error: \{ NFD.getError() }" );
- *             case OKAY -> System.out.println(STR. "Success! \{ outPath[0] }" );
+ *             case ERROR -> System.err.println(STR."Error: \{NFD.getError()}");
+ *             case OKAY -> System.out.println(STR."Success! \{outPath[0]}");
  *             case CANCEL -> System.out.println("User pressed cancel.");
  *         }
  *     }
@@ -174,20 +175,12 @@ public final class NFD {
         return RuntimeHelper.downcallThrow(LOOKUP.find(name), function, options);
     }
 
-    private static MethodHandle downcallTrivial(String name, FunctionDescriptors function) {
-        return downcall(name, function, Linker.Option.isTrivial());
-    }
-
     private static MethodHandle downcall(String name, FunctionDescriptor function) {
         return RuntimeHelper.downcallThrow(LOOKUP.find(name), function);
     }
 
     private static MethodHandle downcallSafe(String name, FunctionDescriptors function, Linker.Option... options) {
         return RuntimeHelper.downcallSafe(LOOKUP.find(name).orElse(MemorySegment.NULL), function, options);
-    }
-
-    private static MethodHandle downcallSafeTrivial(String name, FunctionDescriptors function) {
-        return downcallSafe(name, function, Linker.Option.isTrivial());
     }
 
     private static MethodHandle downcallSafe(String name, FunctionDescriptor function) {
@@ -198,16 +191,17 @@ public final class NFD {
         final MemoryStack stack = MemoryStack.stackGet();
         final long stackPointer = stack.getPointer();
         try {
-            if (isOsWin) return RuntimeHelper.allocateUtf16LEString(stack, str);
-            return stack.allocateUtf8String(str);
+            if (isOsWin) return stack.allocateFrom(str, StandardCharsets.UTF_16LE);
+            return stack.allocateFrom(str);
         } finally {
             stack.setPointer(stackPointer);
         }
     }
 
     static String getString(MemorySegment segment, long offset) {
-        if (isOsWin) return RuntimeHelper.getUtf16LEString(segment, offset);
-        return segment.getUtf8String(offset);
+        final MemorySegment segment1 = segment.byteSize() == 0 ? segment.reinterpret(Long.MAX_VALUE) : segment;
+        if (isOsWin) return segment1.getString(offset, StandardCharsets.UTF_16LE);
+        return segment1.getString(offset);
     }
 
     /**
@@ -287,7 +281,7 @@ public final class NFD {
                 filterList != null ? Math.toIntExact(filterList.elementCount()) : 0,
                 defaultPath != null ? allocateString(defaultPath) : MemorySegment.NULL);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
                 outPath[0] = getString(path, 0);
                 freePathN(path);
             }
@@ -372,7 +366,7 @@ public final class NFD {
                 defaultPath != null ? allocateString(defaultPath) : MemorySegment.NULL,
                 defaultName != null ? allocateString(defaultName) : MemorySegment.NULL);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
                 outPath[0] = getString(path, 0);
                 freePathN(path);
             }
@@ -413,7 +407,7 @@ public final class NFD {
             final MemorySegment seg = stack.callocPointer();
             final NFDResult result = npickFolderN(seg, defaultPath != null ? allocateString(defaultPath) : MemorySegment.NULL);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
                 outPath[0] = getString(path, 0);
                 freePathN(path);
             }
@@ -448,7 +442,7 @@ public final class NFD {
      */
     public static String getError() {
         final MemorySegment seg = ngetError();
-        return RuntimeHelper.isNullptr(seg) ? null : seg.getUtf8String(0);
+        return RuntimeHelper.isNullptr(seg) ? null : seg.getString(0);
     }
 
     /**
@@ -566,7 +560,7 @@ public final class NFD {
             final MemorySegment seg = stack.callocPointer();
             final NFDResult result = npathSetGetPathN(pathSet, index, seg);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
                 outPath[0] = getString(path, 0);
                 pathSetFreePathN(path);
             }
@@ -655,7 +649,7 @@ public final class NFD {
             final MemorySegment seg = stack.callocPointer();
             final NFDResult result = npathSetEnumNextN(enumerator, seg);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
                 if (!RuntimeHelper.isNullptr(path)) {
                     outPath[0] = getString(path, 0);
                     pathSetFreePathN(path);
@@ -732,10 +726,10 @@ public final class NFD {
             final NFDResult result = nopenDialogU8(seg,
                 filterList != null ? filterList.address() : MemorySegment.NULL,
                 filterList != null ? Math.toIntExact(filterList.elementCount()) : 0,
-                defaultPath != null ? stack.allocateUtf8String(defaultPath) : MemorySegment.NULL);
+                defaultPath != null ? stack.allocateFrom(defaultPath) : MemorySegment.NULL);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
-                outPath[0] = path.getUtf8String(0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
+                outPath[0] = RuntimeHelper.getString(path);
                 freePathU8(path);
             }
             return result;
@@ -781,7 +775,7 @@ public final class NFD {
             return nopenDialogMultipleU8(outPaths,
                 filterList != null ? filterList.address() : MemorySegment.NULL,
                 filterList != null ? Math.toIntExact(filterList.elementCount()) : 0,
-                defaultPath != null ? stack.allocateUtf8String(defaultPath) : MemorySegment.NULL);
+                defaultPath != null ? stack.allocateFrom(defaultPath) : MemorySegment.NULL);
         } finally {
             stack.setPointer(stackPointer);
         }
@@ -826,11 +820,11 @@ public final class NFD {
             final NFDResult result = nsaveDialogU8(seg,
                 filterList != null ? filterList.address() : MemorySegment.NULL,
                 filterList != null ? Math.toIntExact(filterList.elementCount()) : 0,
-                defaultPath != null ? stack.allocateUtf8String(defaultPath) : MemorySegment.NULL,
-                defaultName != null ? stack.allocateUtf8String(defaultName) : MemorySegment.NULL);
+                defaultPath != null ? stack.allocateFrom(defaultPath) : MemorySegment.NULL,
+                defaultName != null ? stack.allocateFrom(defaultName) : MemorySegment.NULL);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
-                outPath[0] = path.getUtf8String(0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
+                outPath[0] = RuntimeHelper.getString(path);
                 freePathU8(path);
             }
             return result;
@@ -870,10 +864,10 @@ public final class NFD {
         final long stackPointer = stack.getPointer();
         try {
             final MemorySegment seg = stack.callocPointer();
-            final NFDResult result = npickFolderU8(seg, defaultPath != null ? stack.allocateUtf8String(defaultPath) : MemorySegment.NULL);
+            final NFDResult result = npickFolderU8(seg, defaultPath != null ? stack.allocateFrom(defaultPath) : MemorySegment.NULL);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
-                outPath[0] = path.getUtf8String(0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
+                outPath[0] = RuntimeHelper.getString(path);
                 freePathU8(path);
             }
             return result;
@@ -922,8 +916,8 @@ public final class NFD {
             final MemorySegment seg = stack.callocPointer();
             final NFDResult result = npathSetGetPathU8(pathSet, index, seg);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
-                outPath[0] = path.getUtf8String(0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
+                outPath[0] = RuntimeHelper.getString(path);
                 pathSetFreePathU8(path);
             }
             return result;
@@ -968,9 +962,9 @@ public final class NFD {
             final MemorySegment seg = stack.callocPointer();
             final NFDResult result = npathSetEnumNextU8(enumerator, seg);
             if (result == NFDResult.OKAY) {
-                final MemorySegment path = seg.get(RuntimeHelper.ADDRESS_UNBOUNDED, 0);
+                final MemorySegment path = seg.get(ADDRESS, 0);
                 if (!RuntimeHelper.isNullptr(path)) {
-                    outPath[0] = path.getUtf8String(0);
+                    outPath[0] = RuntimeHelper.getString(path);
                     pathSetFreePathU8(path);
                 }
             }
