@@ -226,9 +226,9 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static int createShaderProgramv(SegmentAllocator allocator, int type, String[] strings) {
-        var seg = allocator.allocateArray(ADDRESS, strings.length);
+        var seg = allocator.allocate(ADDRESS, strings.length);
         for (int i = 0; i < strings.length; i++) {
-            seg.setAtIndex(ADDRESS, i, allocator.allocateUtf8String(strings[i]));
+            seg.setAtIndex(ADDRESS, i, allocator.allocateFrom(strings[i]));
         }
         return createShaderProgramv(type, strings.length, seg);
     }
@@ -237,7 +237,7 @@ public sealed class GL41C extends GL40C permits GL42C {
         final MemoryStack stack = MemoryStack.stackGet();
         final long stackPointer = stack.getPointer();
         try {
-            return createShaderProgramv(type, 1, stack.allocate(ADDRESS, stack.allocateUtf8String(string)));
+            return createShaderProgramv(type, 1, stack.allocateFrom(ADDRESS, stack.allocateFrom(string)));
         } finally {
             stack.setPointer(stackPointer);
         }
@@ -253,7 +253,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void deleteProgramPipelines(SegmentAllocator allocator, int[] pipelines) {
-        deleteProgramPipelines(pipelines.length, allocator.allocateArray(JAVA_INT, pipelines));
+        deleteProgramPipelines(pipelines.length, allocator.allocateFrom(JAVA_INT, pipelines));
     }
 
     public static void deleteProgramPipeline(int pipeline) {
@@ -276,7 +276,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void depthRangeArrayv(SegmentAllocator allocator, int first, double[] v) {
-        depthRangeArrayv(first, v.length, allocator.allocateArray(JAVA_DOUBLE, v));
+        depthRangeArrayv(first, v.length, allocator.allocateFrom(JAVA_DOUBLE, v));
     }
 
     public static void depthRangeIndexed(int index, double n, double f) {
@@ -307,7 +307,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void genProgramPipelines(SegmentAllocator allocator, int[] pipelines) {
-        var seg = allocator.allocateArray(JAVA_INT, pipelines.length);
+        var seg = allocator.allocate(JAVA_INT, pipelines.length);
         genProgramPipelines(pipelines.length, seg);
         RuntimeHelper.toArray(seg, pipelines);
     }
@@ -334,7 +334,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void getDoublei_v(SegmentAllocator allocator, int target, int index, double[] data) {
-        var seg = allocator.allocateArray(JAVA_DOUBLE, data.length);
+        var seg = allocator.allocate(JAVA_DOUBLE, data.length);
         getDoublei_v(target, index, seg);
         RuntimeHelper.toArray(seg, data);
     }
@@ -361,7 +361,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void getFloati_v(SegmentAllocator allocator, int target, int index, float[] data) {
-        var seg = allocator.allocateArray(JAVA_FLOAT, data.length);
+        var seg = allocator.allocate(JAVA_FLOAT, data.length);
         getFloati_v(target, index, seg);
         RuntimeHelper.toArray(seg, data);
     }
@@ -418,19 +418,19 @@ public sealed class GL41C extends GL40C permits GL42C {
 
     public static void getProgramPipelineInfoLog(SegmentAllocator allocator, int pipeline, int bufSize, int @Nullable [] length, String[] infoLog) {
         var pl = length != null ? allocator.allocate(JAVA_INT) : MemorySegment.NULL;
-        var pi = allocator.allocateArray(JAVA_BYTE, bufSize);
+        var pi = allocator.allocate(JAVA_BYTE, bufSize);
         getProgramPipelineInfoLog(pipeline, bufSize, pl, pi);
         if (length != null && length.length > 0) {
             length[0] = pl.get(JAVA_INT, 0);
         }
-        infoLog[0] = pi.getUtf8String(0);
+        infoLog[0] = pi.getString(0);
     }
 
     public static String getProgramPipelineInfoLog(SegmentAllocator allocator, int pipeline) {
         final int sz = getProgramPipelinei(pipeline, INFO_LOG_LENGTH);
-        var pi = allocator.allocateArray(JAVA_BYTE, sz);
+        var pi = allocator.allocate(JAVA_BYTE, sz);
         getProgramPipelineInfoLog(pipeline, sz, MemorySegment.NULL, pi);
-        return pi.getUtf8String(0);
+        return pi.getString(0);
     }
 
     public static void getProgramPipelineiv(int pipeline, int pname, MemorySegment params) {
@@ -464,7 +464,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void getShaderPrecisionFormat(SegmentAllocator allocator, int shaderType, int precisionType, int[] range, int[] precision) {
-        var pr = allocator.allocateArray(JAVA_INT, range.length);
+        var pr = allocator.allocate(JAVA_INT, range.length);
         var pp = allocator.allocate(JAVA_INT);
         getShaderPrecisionFormat(shaderType, precisionType, pr, pp);
         RuntimeHelper.toArray(pr, range);
@@ -481,7 +481,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void getVertexAttribLdv(SegmentAllocator allocator, int index, int pname, double[] params) {
-        var seg = allocator.allocateArray(JAVA_DOUBLE, params.length);
+        var seg = allocator.allocate(JAVA_DOUBLE, params.length);
         getVertexAttribLdv(index, pname, seg);
         RuntimeHelper.toArray(seg, params);
     }
@@ -536,7 +536,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform1dv(SegmentAllocator allocator, int program, int location, double[] value) {
-        programUniform1dv(program, location, value.length, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniform1dv(program, location, value.length, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniform1f(int program, int location, float v0) {
@@ -558,7 +558,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform1fv(SegmentAllocator allocator, int program, int location, float[] value) {
-        programUniform1fv(program, location, value.length, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniform1fv(program, location, value.length, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniform1i(int program, int location, int v0) {
@@ -580,7 +580,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform1iv(SegmentAllocator allocator, int program, int location, int[] value) {
-        programUniform1iv(program, location, value.length, allocator.allocateArray(JAVA_INT, value));
+        programUniform1iv(program, location, value.length, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void programUniform1ui(int program, int location, int v0) {
@@ -602,7 +602,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform1uiv(SegmentAllocator allocator, int program, int location, int[] value) {
-        programUniform1uiv(program, location, value.length, allocator.allocateArray(JAVA_INT, value));
+        programUniform1uiv(program, location, value.length, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void programUniform2d(int program, int location, double v0, double v1) {
@@ -624,7 +624,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform2dv(SegmentAllocator allocator, int program, int location, double[] value) {
-        programUniform2dv(program, location, value.length >> 2, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniform2dv(program, location, value.length >> 2, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniform2f(int program, int location, float v0, float v1) {
@@ -646,7 +646,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform2fv(SegmentAllocator allocator, int program, int location, float[] value) {
-        programUniform2fv(program, location, value.length >> 2, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniform2fv(program, location, value.length >> 2, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniform2i(int program, int location, int v0, int v1) {
@@ -668,7 +668,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform2iv(SegmentAllocator allocator, int program, int location, int[] value) {
-        programUniform2iv(program, location, value.length >> 2, allocator.allocateArray(JAVA_INT, value));
+        programUniform2iv(program, location, value.length >> 2, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void programUniform2ui(int program, int location, int v0, int v1) {
@@ -690,7 +690,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform2uiv(SegmentAllocator allocator, int program, int location, int[] value) {
-        programUniform2uiv(program, location, value.length >> 2, allocator.allocateArray(JAVA_INT, value));
+        programUniform2uiv(program, location, value.length >> 2, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void programUniform3d(int program, int location, double v0, double v1, double v2) {
@@ -712,7 +712,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform3dv(SegmentAllocator allocator, int program, int location, double[] value) {
-        programUniform3dv(program, location, value.length / 3, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniform3dv(program, location, value.length / 3, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniform3f(int program, int location, float v0, float v1, float v2) {
@@ -734,7 +734,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform3fv(SegmentAllocator allocator, int program, int location, float[] value) {
-        programUniform3fv(program, location, value.length / 3, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniform3fv(program, location, value.length / 3, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniform3i(int program, int location, int v0, int v1, int v2) {
@@ -756,7 +756,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform3iv(SegmentAllocator allocator, int program, int location, int[] value) {
-        programUniform3iv(program, location, value.length / 3, allocator.allocateArray(JAVA_INT, value));
+        programUniform3iv(program, location, value.length / 3, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void programUniform3ui(int program, int location, int v0, int v1, int v2) {
@@ -778,7 +778,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform3uiv(SegmentAllocator allocator, int program, int location, int[] value) {
-        programUniform3uiv(program, location, value.length / 3, allocator.allocateArray(JAVA_INT, value));
+        programUniform3uiv(program, location, value.length / 3, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void programUniform4d(int program, int location, double v0, double v1, double v2, double v3) {
@@ -800,7 +800,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform4dv(SegmentAllocator allocator, int program, int location, double[] value) {
-        programUniform4dv(program, location, value.length >> 2, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniform4dv(program, location, value.length >> 2, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniform4f(int program, int location, float v0, float v1, float v2, float v3) {
@@ -822,7 +822,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform4fv(SegmentAllocator allocator, int program, int location, float[] value) {
-        programUniform4fv(program, location, value.length >> 2, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniform4fv(program, location, value.length >> 2, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniform4i(int program, int location, int v0, int v1, int v2, int v3) {
@@ -844,7 +844,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform4iv(SegmentAllocator allocator, int program, int location, int[] value) {
-        programUniform4iv(program, location, value.length >> 2, allocator.allocateArray(JAVA_INT, value));
+        programUniform4iv(program, location, value.length >> 2, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void programUniform4ui(int program, int location, int v0, int v1, int v2, int v3) {
@@ -866,7 +866,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniform4uiv(SegmentAllocator allocator, int program, int location, int[] value) {
-        programUniform4uiv(program, location, value.length >> 2, allocator.allocateArray(JAVA_INT, value));
+        programUniform4uiv(program, location, value.length >> 2, allocator.allocateFrom(JAVA_INT, value));
     }
 
     public static void programUniformMatrix2dv(int program, int location, int count, boolean transpose, MemorySegment value) {
@@ -879,7 +879,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix2dv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, double[] value) {
-        programUniformMatrix2dv(program, location, count, transpose, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniformMatrix2dv(program, location, count, transpose, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniformMatrix2dv(SegmentAllocator allocator, int program, int location, boolean transpose, double[] value) {
@@ -896,7 +896,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix2fv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, float[] value) {
-        programUniformMatrix2fv(program, location, count, transpose, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniformMatrix2fv(program, location, count, transpose, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniformMatrix2fv(SegmentAllocator allocator, int program, int location, boolean transpose, float[] value) {
@@ -913,7 +913,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix2x3dv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, double[] value) {
-        programUniformMatrix2x3dv(program, location, count, transpose, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniformMatrix2x3dv(program, location, count, transpose, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniformMatrix2x3dv(SegmentAllocator allocator, int program, int location, boolean transpose, double[] value) {
@@ -930,7 +930,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix2x3fv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, float[] value) {
-        programUniformMatrix2x3fv(program, location, count, transpose, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniformMatrix2x3fv(program, location, count, transpose, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniformMatrix2x3fv(SegmentAllocator allocator, int program, int location, boolean transpose, float[] value) {
@@ -947,7 +947,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix2x4dv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, double[] value) {
-        programUniformMatrix2x4dv(program, location, count, transpose, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniformMatrix2x4dv(program, location, count, transpose, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniformMatrix2x4dv(SegmentAllocator allocator, int program, int location, boolean transpose, double[] value) {
@@ -964,7 +964,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix2x4fv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, float[] value) {
-        programUniformMatrix2x4fv(program, location, count, transpose, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniformMatrix2x4fv(program, location, count, transpose, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniformMatrix2x4fv(SegmentAllocator allocator, int program, int location, boolean transpose, float[] value) {
@@ -981,7 +981,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix3dv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, double[] value) {
-        programUniformMatrix3dv(program, location, count, transpose, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniformMatrix3dv(program, location, count, transpose, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniformMatrix3dv(SegmentAllocator allocator, int program, int location, boolean transpose, double[] value) {
@@ -998,7 +998,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix3fv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, float[] value) {
-        programUniformMatrix3fv(program, location, count, transpose, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniformMatrix3fv(program, location, count, transpose, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniformMatrix3fv(SegmentAllocator allocator, int program, int location, boolean transpose, float[] value) {
@@ -1015,7 +1015,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix3x2dv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, double[] value) {
-        programUniformMatrix3x2dv(program, location, count, transpose, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniformMatrix3x2dv(program, location, count, transpose, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniformMatrix3x2dv(SegmentAllocator allocator, int program, int location, boolean transpose, double[] value) {
@@ -1032,7 +1032,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix3x2fv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, float[] value) {
-        programUniformMatrix3x2fv(program, location, count, transpose, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniformMatrix3x2fv(program, location, count, transpose, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniformMatrix3x2fv(SegmentAllocator allocator, int program, int location, boolean transpose, float[] value) {
@@ -1049,7 +1049,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix3x4dv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, double[] value) {
-        programUniformMatrix3x4dv(program, location, count, transpose, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniformMatrix3x4dv(program, location, count, transpose, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniformMatrix3x4dv(SegmentAllocator allocator, int program, int location, boolean transpose, double[] value) {
@@ -1066,7 +1066,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix3x4fv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, float[] value) {
-        programUniformMatrix3x4fv(program, location, count, transpose, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniformMatrix3x4fv(program, location, count, transpose, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniformMatrix3x4fv(SegmentAllocator allocator, int program, int location, boolean transpose, float[] value) {
@@ -1083,7 +1083,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix4dv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, double[] value) {
-        programUniformMatrix4dv(program, location, count, transpose, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniformMatrix4dv(program, location, count, transpose, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniformMatrix4dv(SegmentAllocator allocator, int program, int location, boolean transpose, double[] value) {
@@ -1100,7 +1100,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix4fv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, float[] value) {
-        programUniformMatrix4fv(program, location, count, transpose, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniformMatrix4fv(program, location, count, transpose, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniformMatrix4fv(SegmentAllocator allocator, int program, int location, boolean transpose, float[] value) {
@@ -1117,7 +1117,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix4x2dv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, double[] value) {
-        programUniformMatrix4x2dv(program, location, count, transpose, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniformMatrix4x2dv(program, location, count, transpose, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniformMatrix4x2dv(SegmentAllocator allocator, int program, int location, boolean transpose, double[] value) {
@@ -1134,7 +1134,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix4x2fv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, float[] value) {
-        programUniformMatrix4x2fv(program, location, count, transpose, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniformMatrix4x2fv(program, location, count, transpose, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniformMatrix4x2fv(SegmentAllocator allocator, int program, int location, boolean transpose, float[] value) {
@@ -1151,7 +1151,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix4x3dv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, double[] value) {
-        programUniformMatrix4x3dv(program, location, count, transpose, allocator.allocateArray(JAVA_DOUBLE, value));
+        programUniformMatrix4x3dv(program, location, count, transpose, allocator.allocateFrom(JAVA_DOUBLE, value));
     }
 
     public static void programUniformMatrix4x3dv(SegmentAllocator allocator, int program, int location, boolean transpose, double[] value) {
@@ -1168,7 +1168,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void programUniformMatrix4x3fv(SegmentAllocator allocator, int program, int location, int count, boolean transpose, float[] value) {
-        programUniformMatrix4x3fv(program, location, count, transpose, allocator.allocateArray(JAVA_FLOAT, value));
+        programUniformMatrix4x3fv(program, location, count, transpose, allocator.allocateFrom(JAVA_FLOAT, value));
     }
 
     public static void programUniformMatrix4x3fv(SegmentAllocator allocator, int program, int location, boolean transpose, float[] value) {
@@ -1194,7 +1194,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void scissorArrayv(SegmentAllocator allocator, int first, int count, int[] v) {
-        scissorArrayv(first, count, allocator.allocateArray(JAVA_INT, v));
+        scissorArrayv(first, count, allocator.allocateFrom(JAVA_INT, v));
     }
 
     public static void scissorIndexed(int index, int left, int bottom, int width, int height) {
@@ -1216,7 +1216,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void scissorIndexedv(SegmentAllocator allocator, int index, int[] v) {
-        scissorIndexedv(index, allocator.allocateArray(JAVA_INT, v));
+        scissorIndexedv(index, allocator.allocateFrom(JAVA_INT, v));
     }
 
     public static void shaderBinary(int count, MemorySegment shaders, int binaryFormat, MemorySegment binary, int length) {
@@ -1229,7 +1229,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void shaderBinary(SegmentAllocator allocator, int[] shaders, int binaryFormat, MemorySegment binary, int length) {
-        shaderBinary(shaders.length, allocator.allocateArray(JAVA_INT, shaders), binaryFormat, binary, length);
+        shaderBinary(shaders.length, allocator.allocateFrom(JAVA_INT, shaders), binaryFormat, binary, length);
     }
 
     public static void shaderBinary(SegmentAllocator allocator, int[] shaders, int binaryFormat, MemorySegment binary) {
@@ -1273,7 +1273,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void vertexAttribL1dv(SegmentAllocator allocator, int index, double[] v) {
-        vertexAttribL1dv(index, allocator.allocateArray(JAVA_DOUBLE, v));
+        vertexAttribL1dv(index, allocator.allocateFrom(JAVA_DOUBLE, v));
     }
 
     public static void vertexAttribL2d(int index, double x, double y) {
@@ -1295,7 +1295,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void vertexAttribL2dv(SegmentAllocator allocator, int index, double[] v) {
-        vertexAttribL2dv(index, allocator.allocateArray(JAVA_DOUBLE, v));
+        vertexAttribL2dv(index, allocator.allocateFrom(JAVA_DOUBLE, v));
     }
 
     public static void vertexAttribL3d(int index, double x, double y, double z) {
@@ -1317,7 +1317,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void vertexAttribL3dv(SegmentAllocator allocator, int index, double[] v) {
-        vertexAttribL3dv(index, allocator.allocateArray(JAVA_DOUBLE, v));
+        vertexAttribL3dv(index, allocator.allocateFrom(JAVA_DOUBLE, v));
     }
 
     public static void vertexAttribL4d(int index, double x, double y, double z, double w) {
@@ -1339,7 +1339,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void vertexAttribL4dv(SegmentAllocator allocator, int index, double[] v) {
-        vertexAttribL4dv(index, allocator.allocateArray(JAVA_DOUBLE, v));
+        vertexAttribL4dv(index, allocator.allocateFrom(JAVA_DOUBLE, v));
     }
 
     public static void vertexAttribLPointer(int index, int size, int type, int stride, MemorySegment pointer) {
@@ -1352,7 +1352,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void vertexAttribLPointer(SegmentAllocator allocator, int index, int size, int type, int stride, double[] pointer) {
-        vertexAttribLPointer(index, size, type, stride, allocator.allocateArray(JAVA_DOUBLE, pointer));
+        vertexAttribLPointer(index, size, type, stride, allocator.allocateFrom(JAVA_DOUBLE, pointer));
     }
 
     public static void viewportArrayv(int first, int count, MemorySegment v) {
@@ -1365,7 +1365,7 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void viewportArrayv(SegmentAllocator allocator, int first, int count, float[] v) {
-        viewportArrayv(first, count, allocator.allocateArray(JAVA_FLOAT, v));
+        viewportArrayv(first, count, allocator.allocateFrom(JAVA_FLOAT, v));
     }
 
     public static void viewportIndexedf(int index, float x, float y, float w, float h) {
@@ -1387,6 +1387,6 @@ public sealed class GL41C extends GL40C permits GL42C {
     }
 
     public static void viewportIndexedfv(SegmentAllocator allocator, int index, float[] v) {
-        viewportIndexedfv(index, allocator.allocateArray(JAVA_FLOAT, v));
+        viewportIndexedfv(index, allocator.allocateFrom(JAVA_FLOAT, v));
     }
 }
