@@ -123,7 +123,7 @@ public final class STBImage {
     @Nullable
     public static String failureReason() {
         var pReason = nfailureReason();
-        return RuntimeHelper.isNullptr(pReason) ? null : pReason.getUtf8String(0);
+        return RuntimeHelper.isNullptr(pReason) ? null : pReason.getString(0);
     }
 
     public static void hdrToLdrGamma(float gamma) {
@@ -165,7 +165,7 @@ public final class STBImage {
             var px = stack.allocate(JAVA_INT);
             var py = stack.allocate(JAVA_INT);
             var pc = stack.allocate(JAVA_INT);
-            boolean b = ninfo(stack.allocateUtf8String(filename), px, py, pc);
+            boolean b = ninfo(stack.allocateFrom(filename), px, py, pc);
             x[0] = px.get(JAVA_INT, 0);
             y[0] = py.get(JAVA_INT, 0);
             comp[0] = pc.get(JAVA_INT, 0);
@@ -244,7 +244,7 @@ public final class STBImage {
             var px = stack.callocInt();
             var py = stack.callocInt();
             var pc = stack.callocInt();
-            boolean b = infoFromMemory(allocator.allocateArray(JAVA_BYTE, buffer), px, py, pc);
+            boolean b = infoFromMemory(allocator.allocateFrom(JAVA_BYTE, buffer), px, py, pc);
             x[0] = px.get(JAVA_INT, 0);
             y[0] = py.get(JAVA_INT, 0);
             comp[0] = pc.get(JAVA_INT, 0);
@@ -266,7 +266,7 @@ public final class STBImage {
         final MemoryStack stack = MemoryStack.stackGet();
         final long stackPointer = stack.getPointer();
         try {
-            return nis16Bit(stack.allocateUtf8String(filename));
+            return nis16Bit(stack.allocateFrom(filename));
         } finally {
             stack.setPointer(stackPointer);
         }
@@ -305,7 +305,7 @@ public final class STBImage {
     }
 
     public static boolean is16BitFromMemory(SegmentAllocator allocator, byte[] buffer) {
-        return is16BitFromMemory(allocator.allocateArray(JAVA_BYTE, buffer));
+        return is16BitFromMemory(allocator.allocateFrom(JAVA_BYTE, buffer));
     }
 
     public static boolean nisHdr(MemorySegment filename) {
@@ -320,7 +320,7 @@ public final class STBImage {
         final MemoryStack stack = MemoryStack.stackGet();
         final long stackPointer = stack.getPointer();
         try {
-            return nisHdr(stack.allocateUtf8String(filename));
+            return nisHdr(stack.allocateFrom(filename));
         } finally {
             stack.setPointer(stackPointer);
         }
@@ -359,7 +359,7 @@ public final class STBImage {
     }
 
     public static boolean isHdrFromMemory(SegmentAllocator allocator, byte[] buffer) {
-        return isHdrFromMemory(allocator.allocateArray(JAVA_BYTE, buffer));
+        return isHdrFromMemory(allocator.allocateFrom(JAVA_BYTE, buffer));
     }
 
     public static void ldrToHdrGamma(float gamma) {
@@ -393,7 +393,7 @@ public final class STBImage {
             var px = stack.allocate(JAVA_INT);
             var py = stack.allocate(JAVA_INT);
             var pc = stack.allocate(JAVA_INT);
-            var addr = nload(stack.allocateUtf8String(filename), px, py, pc, desiredChannels);
+            var addr = nload(stack.allocateFrom(filename), px, py, pc, desiredChannels);
             x[0] = px.get(JAVA_INT, 0);
             y[0] = py.get(JAVA_INT, 0);
             channelsInFile[0] = pc.get(JAVA_INT, 0);
@@ -418,7 +418,7 @@ public final class STBImage {
             var px = stack.allocate(JAVA_INT);
             var py = stack.allocate(JAVA_INT);
             var pc = stack.allocate(JAVA_INT);
-            var addr = nload16(stack.allocateUtf8String(filename), px, py, pc, desiredChannels);
+            var addr = nload16(stack.allocateFrom(filename), px, py, pc, desiredChannels);
             x[0] = px.get(JAVA_INT, 0);
             y[0] = py.get(JAVA_INT, 0);
             channelsInFile[0] = pc.get(JAVA_INT, 0);
@@ -469,7 +469,7 @@ public final class STBImage {
         var px = allocator.allocate(JAVA_INT);
         var py = allocator.allocate(JAVA_INT);
         var pc = allocator.allocate(JAVA_INT);
-        var addr = load16FromMemory(allocator.allocateArray(JAVA_BYTE, buffer), px, py, pc, desiredChannels);
+        var addr = load16FromMemory(allocator.allocateFrom(JAVA_BYTE, buffer), px, py, pc, desiredChannels);
         x[0] = px.get(JAVA_INT, 0);
         y[0] = py.get(JAVA_INT, 0);
         channelsInFile[0] = pc.get(JAVA_INT, 0);
@@ -567,7 +567,7 @@ public final class STBImage {
         var px = allocator.allocate(JAVA_INT);
         var py = allocator.allocate(JAVA_INT);
         var pc = allocator.allocate(JAVA_INT);
-        var addr = nloadFromMemory(allocator.allocateArray(JAVA_BYTE, buffer), buffer.length, px, py, pc, desiredChannels);
+        var addr = nloadFromMemory(allocator.allocateFrom(JAVA_BYTE, buffer), buffer.length, px, py, pc, desiredChannels);
         x[0] = px.get(JAVA_INT, 0);
         y[0] = py.get(JAVA_INT, 0);
         channelsInFile[0] = pc.get(JAVA_INT, 0);
@@ -592,7 +592,7 @@ public final class STBImage {
         var py = allocator.allocate(JAVA_INT);
         var pz = allocator.allocate(JAVA_INT);
         var pc = allocator.allocate(JAVA_INT);
-        var addr = loadGifFromMemory(allocator.allocateArray(JAVA_BYTE, buffer), pd, px, py, pz, pc, reqComp);
+        var addr = loadGifFromMemory(allocator.allocateFrom(JAVA_BYTE, buffer), pd, px, py, pz, pc, reqComp);
         x[0] = px.get(JAVA_INT, 0);
         y[0] = py.get(JAVA_INT, 0);
         final int layers = pz.get(JAVA_INT, 0);
@@ -617,7 +617,7 @@ public final class STBImage {
             var px = stack.allocate(JAVA_INT);
             var py = stack.allocate(JAVA_INT);
             var pc = stack.allocate(JAVA_INT);
-            var addr = nloadf(stack.allocateUtf8String(filename), px, py, pc, desiredChannels);
+            var addr = nloadf(stack.allocateFrom(filename), px, py, pc, desiredChannels);
             x[0] = px.get(JAVA_INT, 0);
             y[0] = py.get(JAVA_INT, 0);
             channelsInFile[0] = pc.get(JAVA_INT, 0);
@@ -693,7 +693,7 @@ public final class STBImage {
         var px = allocator.allocate(JAVA_INT);
         var py = allocator.allocate(JAVA_INT);
         var pc = allocator.allocate(JAVA_INT);
-        var addr = nloadfFromMemory(allocator.allocateArray(JAVA_BYTE, buffer), buffer.length, px, py, pc, desiredChannels);
+        var addr = nloadfFromMemory(allocator.allocateFrom(JAVA_BYTE, buffer), buffer.length, px, py, pc, desiredChannels);
         x[0] = px.get(JAVA_INT, 0);
         y[0] = py.get(JAVA_INT, 0);
         channelsInFile[0] = pc.get(JAVA_INT, 0);
